tests/machine/x/java/string_index.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsstring_index3897767112/001/Main.java:3: error: incompatible types: String cannot be converted to int
	static int s = "mochi";
	               ^
/tmp/TestCompileValidProgramsstring_index3897767112/001/Main.java:5: error: int cannot be dereferenced
	System.out.println(s.get(1));
	                    ^
2 errors


  1| let s = "mochi"
  2| print(s[1])
