tests/machine/x/java/string_index.java
import java.util.*;
public class Main {
	static int s = "mochi";
	public static void main(String[] args) {
	System.out.println(s.get(1));
	}
}
